added new solutions